@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19980216
+MANIFEST for ded, version t19980219
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
